objects/MV_Modification__c.object
<CustomObject><fields>
        <fullName>Cohort_Affected__c</fullName>
        <label>Cohort Affected</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Date_Approved_by_QMC__c</fullName>
        <label>Date Approved by QMC</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Modification_Description__c</fullName>
        <label>Modification Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Modification_Type__c</fullName>
        <label>Modification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Module_Version__c</fullName>
        <label>Module Version</label>
        <referenceTo>Module_Version__c</referenceTo>
        <relationshipLabel>Module Version Modifications</relationshipLabel>
        <relationshipName>MV_Modifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Module Version Modification</label><nameField>
        <displayFormat>Mod-{0000}</displayFormat>
        <label>Mod Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Module Version Modifications</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>